tcw3/designer/tests/bad/comp_path_unknown.tcwdl
pub comp unknown::Foo {}
//~^ ERROR Can't find a crate named `unknown`
